{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 182,
  "lineage": "210f1650-55b9-1c13-9626-7488e9579f8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2__AnsibleControlNode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcf5425cdc1d8a85",
            "arn": "arn:aws:ec2:ap-south-1:345004274001:instance/i-0dcaf96bed51aa9e3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcaf96bed51aa9e3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e8342b0855bfdcf",
            "private_dns": "ip-172-20-10-103.ap-south-1.compute.internal",
            "private_ip": "172.20.10.103",
            "public_ip": "52.66.250.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-064d39ac91c8c03fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c67117aa27d81219",
            "tags": {
              "Name": "AnsibleContrlnode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0990779cc46d56a67"
            ]
          },
          "dependencies": [
            "aws_security_group.Lab-security-group",
            "aws_subnet.Lab-public-subnet",
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2__AnsibleManagedNode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcf5425cdc1d8a85",
            "arn": "arn:aws:ec2:ap-south-1:345004274001:instance/i-04e3e67308ab0eacf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e3e67308ab0eacf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fdb84fc30cd2b5d6",
            "private_dns": "ip-172-20-10-188.ap-south-1.compute.internal",
            "private_ip": "172.20.10.188",
            "public_ip": "65.1.248.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-001ea5766f56d6b26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c67117aa27d81219",
            "tags": {
              "Name": "AnsibleManagedNode-Tomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0990779cc46d56a67"
            ]
          },
          "dependencies": [
            "aws_security_group.Lab-security-group",
            "aws_subnet.Lab-public-subnet",
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2__AnsibleManagedNodeDocker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcf5425cdc1d8a85",
            "arn": "arn:aws:ec2:ap-south-1:345004274001:instance/i-09f9ae5b7eab50fab",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f9ae5b7eab50fab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08f6120467abd610e",
            "private_dns": "ip-172-20-10-45.ap-south-1.compute.internal",
            "private_ip": "172.20.10.45",
            "public_ip": "52.66.239.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005c37d053c66444e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c67117aa27d81219",
            "tags": {
              "Name": "AnsibleManagedNode-Docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0990779cc46d56a67"
            ]
          },
          "dependencies": [
            "aws_security_group.Lab-security-group",
            "aws_subnet.Lab-public-subnet",
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2__Sonatype",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcf5425cdc1d8a85",
            "arn": "arn:aws:ec2:ap-south-1:345004274001:instance/i-0e98ec2d5dd95a8f9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e98ec2d5dd95a8f9",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06d543137a6abb82b",
            "private_dns": "ip-172-20-10-223.ap-south-1.compute.internal",
            "private_ip": "172.20.10.223",
            "public_ip": "13.127.247.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06663ccbe1d3ddfa2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c67117aa27d81219",
            "tags": {
              "Name": "SonatypeServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0990779cc46d56a67"
            ]
          },
          "dependencies": [
            "aws_security_group.Lab-security-group",
            "aws_subnet.Lab-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2__instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcf5425cdc1d8a85",
            "arn": "arn:aws:ec2:ap-south-1:345004274001:instance/i-01d5c69ce26ceb4ff",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d5c69ce26ceb4ff",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04a875876089d6e7d",
            "private_dns": "ip-172-20-10-72.ap-south-1.compute.internal",
            "private_ip": "172.20.10.72",
            "public_ip": "13.232.115.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ecd5181f88e3ede4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c67117aa27d81219",
            "tags": {
              "Name": "Jenkins_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0990779cc46d56a67"
            ]
          },
          "dependencies": [
            "aws_security_group.Lab-security-group",
            "aws_subnet.Lab-public-subnet",
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Lab-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:345004274001:internet-gateway/igw-0af646af3bfc5bbd1",
            "id": "igw-0af646af3bfc5bbd1",
            "owner_id": "345004274001",
            "tags": {
              "Name": "Terra-internet-Gateway"
            },
            "vpc_id": "vpc-0ea3c4e04de85a989"
          },
          "dependencies": [
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Lab_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:345004274001:route-table/rtb-0b725d0d2635d8df6",
            "id": "rtb-0b725d0d2635d8df6",
            "owner_id": "345004274001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af646af3bfc5bbd1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myRouteTable"
            },
            "vpc_id": "vpc-0ea3c4e04de85a989"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Lab-internet-gateway",
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Lab_Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066095321c22f92c3",
            "route_table_id": "rtb-0b725d0d2635d8df6",
            "subnet_id": "subnet-0c67117aa27d81219"
          },
          "dependencies": [
            "aws_internet_gateway.Lab-internet-gateway",
            "aws_route_table.Lab_Route_table",
            "aws_subnet.Lab-public-subnet",
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lab-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:345004274001:security-group/sg-0990779cc46d56a67",
            "description": "To manage inbound , outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0990779cc46d56a67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Lab-security-group",
            "name_prefix": "",
            "owner_id": "345004274001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea3c4e04de85a989"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Lab-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:345004274001:subnet/subnet-0c67117aa27d81219",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-0c67117aa27d81219",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345004274001",
            "tags": {
              "Name": "terra-public-subet"
            },
            "tags_all": {
              "Name": "terra-public-subet"
            },
            "vpc_id": "vpc-0ea3c4e04de85a989"
          },
          "dependencies": [
            "aws_vpc.Lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Lab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:345004274001:vpc/vpc-0ea3c4e04de85a989",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0bdf964b90df9279a",
            "default_route_table_id": "rtb-0526995e8e79704d8",
            "default_security_group_id": "sg-09548ae82125e3301",
            "dhcp_options_id": "dopt-0a2bf761",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ea3c4e04de85a989",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0526995e8e79704d8",
            "owner_id": "345004274001",
            "tags": {
              "Name": "MyFirstTerraVPC"
            },
            "tags_all": {
              "Name": "MyFirstTerraVPC"
            }
          }
        }
      ]
    }
  ]
}